# Neuro

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/Neuro/: Functions.hpp  Model.hpp  Network.hpp  Neuron.hpp  Structures.hpp
src/: CMakeLists.txt
src/Neuro/: CMakeLists.txt  Model.cpp  Network.cpp  Neuron.cpp  Structures.cpp
src/Neuro-Test/: CMakeLists.txt  main.cpp
